--- a/index.html
+++ b/index.html
@@ -1,9 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/assets/images/logo/easy-diary.png" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="./src/assets/images/logo/easy-diary.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    />
+
     <title>Easy Diary</title>
   </head>
   <body>
